force-app/main/default/objects/Sales_Commission__c/Sales_Commission__c.object-meta.xml
<CustomObject>
    <label>Sales Commission</label>
    <nameField>
        <displayFormat>SC-{00000000}</displayFormat>
        <label>Sales Commission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>