force-app/main/default/objects/Sales_Commission__c/fields/Actual_Fin_Period_Capped__c.field-meta.xml
<CustomField>
    <fullName>Actual_Fin_Period_Capped__c</fullName>
    <formula>IF( ISNULL(Invoice_Finance_Deal__r.actual_financing_period__c), null,
IF( AND( Invoice_Allocation__c != null, Invoice_Allocation__r.Expected_finance_period_buyback_capped__c != Invoice_Finance_Deal__r.expected_financing_period__c), 
Invoice_Allocation__r.Expected_finance_period_buyback_capped__c + MIN (15, Invoice_Allocation__r.Overdue_day_capped__c),
MAX( MIN (Invoice_Finance_Deal__r.actual_financing_period__c, Invoice_Finance_Deal__r.expected_financing_period__c + 15),
Invoice_Finance_Deal__r.expected_financing_period__c - 15)))</formula>
    <label>Actual Fin Period Capped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>