force-app/main/default/objects/Sales_Commission__c/fields/Agent_Percentage_Portion__c.field-meta.xml
<CustomField>
    <fullName>Agent_Percentage_Portion__c</fullName>
    <inlineHelpText>default 1 if no agent fees</inlineHelpText>
    <label>Agent Multiplicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>