force-app/main/default/objects/Sales_Commission__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF (Invoice_Allocation__c != null,
Invoice_Allocation__r.amount__c,
Invoice_Finance_Deal__r.funded_amount__c)</formula>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>