force-app/main/default/objects/Sales_Commission__c/fields/CCY__c.field-meta.xml
<CustomField>
    <fullName>CCY__c</fullName>
    <formula>Invoice_Finance_Deal__r.CCY_TXT__c</formula>
    <label>CCY</label>
    <type>Text</type>
</CustomField>