force-app/main/default/objects/Sales_Commission__c/fields/Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>Funder_Name__c</fullName>
    <formula>Invoice_Allocation__r.Funder__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funder</label>
    <type>Text</type>
</CustomField>