force-app/main/default/objects/Sales_Commission__c/fields/Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Date__c</fullName>
    <label>Funding Date</label>
    <type>Date</type>
</CustomField>