force-app/main/default/objects/Sales_Commission__c/fields/Funding_Sales_Owner_2__c.field-meta.xml
<CustomField>
    <fullName>Funding_Sales_Owner_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Sales Owner 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Commissions1</relationshipName>
    <type>Lookup</type>
</CustomField>