force-app/main/default/objects/Sales_Commission__c/fields/FX_conversion_rate__c.field-meta.xml
<CustomField>
    <fullName>FX_conversion_rate__c</fullName>
    <formula>IF(CCY__c = &apos;USD&apos;, 1, Invoice_Finance_Deal__r.FX_conversion_rate__c)</formula>
    <label>FX conversion rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>