force-app/main/default/objects/Sales_Commission__c/fields/Head_Sales__c.field-meta.xml
<CustomField>
    <fullName>Head_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Commissions4</relationshipName>
    <type>Lookup</type>
</CustomField>