force-app/main/default/objects/Sales_Commission__c/fields/Head_Sales_Com_Amount__c.field-meta.xml
<CustomField>
    <fullName>Head_Sales_Com_Amount__c</fullName>
    <formula>pct_Com_Head_Sales__c * Agent_Percentage_Portion__c 
* IF(Invoice_Allocation__c != null, 0, Invoice_Finance_Deal__r.funded_amount__c * Actual_Fin_Period_Capped__c)
/ 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>in USD equiv of the funded amount and overdue capped 60 days</inlineHelpText>
    <label>Head Sales Com Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>