force-app/main/default/objects/Sales_Commission__c/fields/Head_Sales_Com_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Head_Sales_Com_Amount_USD__c</fullName>
    <formula>Head_Sales_Com_Amount__c * FX_conversion_rate__c</formula>
    <label>Head Sales Com Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>