force-app/main/default/objects/Sales_Commission__c/fields/Invoice_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Allocation</label>
    <referenceTo>Invoice_Allocation__c</referenceTo>
    <relationshipLabel>Sales Commissions</relationshipLabel>
    <relationshipName>Sales_Commission</relationshipName>
    <type>Lookup</type>
</CustomField>