force-app/main/default/objects/Sales_Commission__c/fields/Invoice_Finance_Deal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finance_Deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Finance Deal</label>
    <referenceTo>invoice_finance_deal__c</referenceTo>
    <relationshipLabel>Sales Commissions</relationshipLabel>
    <relationshipName>Sales_Commissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>