force-app/main/default/objects/Sales_Commission__c/fields/Invoice_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sales_Owner__c</fullName>
    <formula>Invoice_Finance_Deal__r.Invoice_Sales_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Sales Owner</label>
    <type>Text</type>
</CustomField>