force-app/main/default/objects/Sales_Commission__c/fields/Owner_1_Repayment_Com_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Owner_1_Repayment_Com_Amount_USD__c</fullName>
    <formula>Owner_1_Repayment_Com_Amount__c * FX_conversion_rate__c</formula>
    <label>Owner 1 Repayment Com Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>