force-app/main/default/objects/Sales_Commission__c/fields/Owner_2_Repayment_Com_Amount__c.field-meta.xml
<CustomField>
    <fullName>Owner_2_Repayment_Com_Amount__c</fullName>
    <formula>pct_Owner_2__c * pct_Com_Repayment__c * pct_Com_Owner__c * Agent_Percentage_Portion__c 
* IF (Invoice_Allocation__c != null,
Invoice_Allocation__r.amount__c ,
Invoice_Finance_Deal__r.funded_amount__c )
* Actual_Fin_Period_Capped__c
* 1 / IF (Invoice_Allocation__c != null, 360, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner 2 Repayment Com Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>