force-app/main/default/objects/Sales_Commission__c/fields/pct_Com_Funding__c.field-meta.xml
<CustomField>
    <fullName>pct_Com_Funding__c</fullName>
    <label>% Com Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>