force-app/main/default/objects/Sales_Commission__c/fields/pct_Com_Owner__c.field-meta.xml
<CustomField>
    <fullName>pct_Com_Owner__c</fullName>
    <label>% Com Owner</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>