force-app/main/default/objects/Sales_Commission__c/fields/pct_Com_Repayment__c.field-meta.xml
<CustomField>
    <fullName>pct_Com_Repayment__c</fullName>
    <formula>1 -  pct_Com_Funding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Com Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>