force-app/main/default/objects/Sales_Commission__c/fields/pct_Owner_1__c.field-meta.xml
<CustomField>
    <fullName>pct_Owner_1__c</fullName>
    <label>% Owner 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>