force-app/main/default/objects/Sales_Commission__c/fields/pct_Owner_2__c.field-meta.xml
<CustomField>
    <fullName>pct_Owner_2__c</fullName>
    <formula>1 - pct_Owner_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Owner 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>