force-app/main/default/objects/Sales_Commission__c/fields/Repayment_Date__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Date__c</fullName>
    <label>Repayment Date</label>
    <type>Date</type>
</CustomField>