force-app/main/default/objects/Sales_Commission__c/fields/Repayment_Sales_Owner_1__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Sales_Owner_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repayment Sales Owner 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Commissions2</relationshipName>
    <type>Lookup</type>
</CustomField>