force-app/main/default/objects/Sales_Commission__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Owner</fullName>
                <default>true</default>
                <label>Sales Owner</label>
            </value>
            <value>
                <fullName>Funding Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>