force-app/main/default/objects/Sales_Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Finance_Deal__c</columns>
    <columns>Repayment_Date__c</columns>
    <columns>Head_Sales__c</columns>
    <columns>Repayment_Sales_Owner_1__c</columns>
    <columns>Repayment_Sales_Owner_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>